# EnlightenmentUbuntu

./: README.md
apps/econnman/: .arcconfig  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  econnman-bin.in  econnman.spec.in
apps/econnman/data/desktop/: econnman-agent.desktop  econnman.desktop
apps/enjoy/: configure.ac
apps/enjoy/data/desktop/: enjoy.desktop
apps/enjoy/data/themes/: default.edc
apps/epour/: AUTHORS  MANIFEST  README  TODO  setup.py
apps/epour/data/: epour.desktop.in
apps/epour/debian/: changelog  control  rules
apps/epour/epour/: Epour.py  Globals.py  session.py
apps/equate/: AUTHORS
apps/equate/src/: main.c
apps/eruler/: Makefile.am  README  configure.ac
apps/eruler/data/desktop/: eruler.desktop
apps/eruler/data/themes/: default.edc
apps/espionage/: ChangeLog  README  setup.py
apps/espionage/data/: espionage.desktop
apps/espionage/espionage/: espionage.py
bindings/cxx/eflxx/eoxx/: COPYING  Makefile.am  README  TODO  autogen.sh  configure.ac  eoxx.pc.in
bindings/cxx/eflxx/eoxx/src/: Makefile.am
bindings/cxx/eflxx/eoxx/src/examples/: Makefile.am  eoxx_test.cc
bindings/cxx/eflxx/eoxx/src/lib/: Eo.cc  Eo.hh  Eo.xx  Makefile.am
bindings/elev8/: configure.ac
bindings/elev8/data/: Makefile.am
games/e_cho/: configure.ac
games/econcentration/: configure.ac
games/efbb/: configure.ac
games/elemines/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  OFL.txt  README  README.artwork  TODO  configure.ac
games/elemines/data/: Makefile.am
games/elemines/data/desktop/: Makefile.am  elemines.desktop
games/elemines/data/themes/default/: Makefile.am  default-big.edc  default.edc
games/elemines/data/themes/default/edc/: Makefile.am  background.edc  cell.edc  colors.edc  congratulation.edc  fonts.edc  grass-side.edc  images.edc  pause.edc  toolbar.edc
games/elemines/data/themes/default/fonts/: Makefile.am
games/elemines/data/themes/default/images/: Makefile.am
games/elemines/data/themes/default/sounds/: Makefile.am  boom.flac  digging.flac  fanfare.flac  flag.flac
games/elemines/doc/: Makefile.am  elemines.1
games/elemines/packaging/: Makefile.am
games/elemines/packaging/slackware/: Makefile.am  elemines.SlackBuild  slack-desc  slack-required
games/elemines/po/: LINGUAS  Makevars  POTFILES.in  elemines.pot  eo.po  fr.po  gl.po  it.po  ko.po  pl.po  pt_PT.po  ru.po  sr.po
games/elemines/src/: Makefile.am  elemines.h  game.c  gui.c  init.c  main.c
games/eskiss/: configure.ac
games/etrophy/: Makefile.am  autogen.sh  configure.ac
games/etrophy/po/: Makevars  POTFILES.in  en.po  etrophy.pot  fr.po
games/etrophy/src/lib/: Etrophy.h  Makefile.am  etrophy.c  etrophy_layouts.c
libs/libeweather/: configure.ac
misc/ephysics_tests/: configure.ac
modules/alarm/: module.desktop.in
modules/alarm/po/: lt.po  sr.po
modules/comp-scale/po/: LINGUAS  eo.po  fr.po  sr.po
modules/comp-scale/src/: e_mod_pager.c
modules/cpu/: configure.ac  module.desktop.in
modules/cpu/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/diskio/: configure.ac
modules/eenvader.fractal/: configure.ac
modules/elev8/: AUTHORS  COPYING-PLAIN  Makefile.am  README  configure.ac  e-module-elev8.edc  e_modules-elev8.spec.in  module.desktop.in  test-gadget.js
modules/elev8/src/: Makefile.am  e_mod_main.c  elev8.cc  elev8.h  gadcon.cc  gadcon.h  timer.cc  utils.cc
modules/elfe/: configure.ac
modules/elfe/src/: winlist.c
modules/engage/: module.desktop.in
modules/engage/po/: LINGUAS  ca.po  eo.po  fr.po  it.po  sr.po
modules/everything-places/: configure.ac
modules/everything-places/po/: LINGUAS  ca.po  sr.po
modules/everything-websearch/: configure.ac
modules/everything-websearch/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  it.po  pt.po  sr.po
modules/everything-websearch/src/: e_mod_main.c
modules/eweather/: Makefile.am  README  TODO  configure.ac  module.desktop.in
modules/eweather/po/: LINGUAS  Makevars  POTFILES.in  ca.po  eo.po  fr.po  hu.po  it.po  ko.po  pt.po  ru.po  sr.po
modules/forecasts/: module.desktop.in
modules/forecasts/po/: ca.po  fr.po  lt.po  sr.po
modules/forecasts/src/: e_mod_config.c  e_mod_main.c
modules/mail/: configure.ac  module.desktop.in
modules/mail/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/moon/: configure.ac  module.desktop.in
modules/moon/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/mpdule/: Makefile.am  configure.ac  module.desktop.in
modules/mpdule/po/: LINGUAS  POTFILES.in  ca.po  eo.po  fr.po  it.po  pl.po  pt.po  ru.po  sr.po  tr.po
modules/mpdule/src/: e_mod_config.c  e_mod_main.c
modules/net/: configure.ac  module.desktop.in
modules/net/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/news/: configure.ac  e_modules-news.spec.in  module.desktop.in
modules/news/po/: ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/news/src/: news_popup.c
modules/penguins/: configure.ac  module.desktop.in
modules/penguins/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  sr.po
modules/penguins/src/: Makefile.am  e_mod_config.c  e_mod_config.h  e_mod_main.c  e_mod_main.h  e_mod_penguins.c  e_mod_penguins.h
modules/photo/: configure.ac  module.desktop.in
modules/photo/po/: LINGUAS  ca.po  eo.po  fr.po  hu.po  lt.po  pt.po  ru.po  sr.po
modules/places/: configure.ac  module.desktop.in
modules/places/po/: ca.po  eo.po  fr.po  gl.po  hu.po  it.po  lt.po  sr.po  tr.po
modules/places/src/: Makefile.am  e_mod_config.c  e_mod_eeze.c  e_mod_main.c  e_mod_main.h  e_mod_places.c  e_mod_places.h  e_mod_udisks_eldbus.c  e_mod_udisks_eldbus.h
themes/b_and_w/e/: default.edc
themes/blingbling/: default_fileman.edc
themes/darkness/: AUTHORS  COPYING  COPYING-IMAGES  build.sh
themes/darkness/e/: evry.edc  shelf.edc
themes/darkness/elm/: build.sh  darkness-common.edc  darkness-desktop.edc  darkness.edc
themes/darkness/widgets/: border.edc  menu.edc  winlist.edc
themes/detourious/bits/: menu.edc  shelf.edc
themes/efenniht/e/: shelf.edc
themes/klok/: COPYRIGHT
(+85 files in other folders)
