MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = about.png \
	     bomb.png \
	     bomb-sad.png \
	     clock.png \
	     config.png \
	     empty.png \
	     fire1.png \
	     fire2.png \
	     fire3.png \
	     fire4.png \
	     fire5.png \
	     fire6.png \
	     fire7.png \
	     fire8.png \
	     flag1.png \
	     flag2.png \
	     flag3.png \
	     flag4.png \
	     flowers.png \
	     grass.png \
	     grass-s.png \
	     grass-n.png \
	     grass-e.png \
	     grass-w.png \
	     hole.png \
	     mushrooms.png \
	     pause.png \
	     quit.png \
	     refresh.png \
	     sand.png \
	     score.png \
	     sky.png \
	     stones.png
